--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
-    <link rel="stylesheet" href="/Resources/style.css">
+    <link rel="stylesheet" href="./Resources/style.css">
   </head>
   <body>
     <div class="heading">
